Adiciona suporte a varredura completa com limites diários e gerenciamento de estado, incluindo novos parâmetros no .env e atualizações na documentação.

--- a/.env
+++ b/.env
@@ -1,8 +1,35 @@
-# Copie este arquivo para .env e preencha seu TOKEN
-# Exemplo:
-# TOKEN=seu_token_fipe_aqui
-# Opcional: código de referência do mês (ex.: 308)
-# REFERENCE=308
+######### FIPE Crawler - Configurações #########
 
+# Autenticação (obrigatório na v2)
 TOKEN=
+
+# Referência do mês (opcional; ex.: 308). Se vazio, usa mês atual
 REFERENCE=
+
+# Parâmetros gerais (podem ser sobrescritos via CLI)
+# Tempo máximo por requisição (s)
+TIMEOUT=15
+# Tentativas em falhas temporárias (429/5xx)
+RETRIES=3
+# Fator de backoff exponencial
+BACKOFF=0.5
+# Atraso entre requisições (s)
+RATE_DELAY=0.0
+# Concorrência (use 1 para respeitar limites diários)
+WORKERS=1
+# Limites para testes (comente/deixe vazio para não limitar)
+# MAX_BRANDS=2
+# MAX_MODELS=3
+
+# Execução direta (opcional): se definir TYPE e OUT, você pode rodar sem passar pela CLI
+# Valores aceitos para TYPE: carros | motos | caminhoes
+# TYPE=carros
+# OUT=fipe_carros.csv
+
+# Full Scan
+# Limite diário do seu plano (req/dia)
+DAILY_LIMIT=500
+# Margem de segurança: quando faltarem N requisições, pausar e retomar no dia seguinte
+LIMIT_MARGIN=10
+# Pasta de saída para os CSVs do full scan
+FULL_SCAN_DIR=full_scan
