Atualiza arquivo .env para definir REFERENCE como 'latest' por padrão e implementa cache para dados da API, melhorando a eficiência do crawler.

--- a/.env
+++ b/.env
@@ -4,7 +4,7 @@
 TOKEN=
 
 # Referência do mês (opcional; ex.: 308). Se vazio, usa mês atual
-REFERENCE=
+REFERENCE=latest
 
 # Parâmetros gerais (podem ser sobrescritos via CLI)
 # Tempo máximo por requisição (s)
